landing: fix: "feature" tiles were not top aligned

--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -27,7 +27,7 @@ h1 {
 }
 
 .feature {
-  display: inline-block;
+  display: inline-flex;
 }
 
 
